external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:3:11
  │
3 │         0 {} = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'

